fix: env variable typo error
fix typo: SING_OUT_DAY -> SIGN_OUT_DAY

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ PARTTIME_USUALLY_ID=
 SIGN_IN_DAY=""
 SIGN_IN_HOUR=""
 SIGN_IN_MINUTES=""
-SING_OUT_DAY=""
+SIGN_OUT_DAY=""
 SIGN_OUT_HOUR=""
 SIGN_OUT_MINUTES=""
