--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-DISCORD_WEBHOOK_URL=""
-PORTAL_TOKEN=""
+DISCORD_WEBHOOK_URL=
+PORTAL_TOKEN=
 PARTTIME_USUALLY_ID=
-SIGN_IN_DAY=""
-SIGN_IN_HOUR=""
-SIGN_IN_MINUTES=""
-SIGN_OUT_DAY=""
-SIGN_OUT_HOUR=""
-SIGN_OUT_MINUTES=""
+SIGN_IN_DAY=
+SIGN_IN_HOUR=
+SIGN_IN_MINUTES=
+SIGN_OUT_DAY=
+SIGN_OUT_HOUR=
+SIGN_OUT_MINUTES=
