feat: deprecate SIGN_IN_DAY & SIGN_OUT_DAY
this change deprecated the environment variable "SIGN_IN_DAY" &
"SIGN_OUT_DAY".

these two environment variables were merged as "SIGNING_DAY".

because the signing tasks should exist in a pair in a day, so it
shouldn't let the user assign the sign-in and sign-out days by their
own.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 DISCORD_WEBHOOK_URL=
 PORTAL_TOKEN=
 PARTTIME_USUALLY_ID=
-SIGN_IN_DAY=
+SIGNING_DAY=
 SIGN_IN_HOUR=
 SIGN_IN_MINUTES=
-SIGN_OUT_DAY=
 SIGN_OUT_HOUR=
 SIGN_OUT_MINUTES=
